--- a/src/index.css
+++ b/src/index.css
@@ -159,3 +159,24 @@ body {
   margin: 2rem;
   gap: 0.5rem;
 }
+
+.poll-result-heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.poll-result-respondents {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #e84733;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.icon {
+  height: 1.5rem;
+  width: auto;
+}
