--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,28 @@ body {
   color: #000;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+  margin-left: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: #e84733;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 
 .poll-info {
   display: flex;
@@ -244,6 +266,7 @@ body {
   align-items: center;
   gap: 1rem;
   justify-content: center;
+  margin: 0 1rem;
 }
 
 .poll-card-heading {
@@ -303,4 +326,20 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-auto-flow: dense;
   grid-gap: 1rem;
+  overflow-y: scroll;
+  max-height: 50vh;
+}
+
+.poll-listing-add {
+  background-color: #ed6859;
+  margin: 1rem 0;
+  padding: 1rem;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  border-radius: 4px;
+}
+
+.poll-listing-add:hover{
+  background-color: #e84733;
 }
