--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,7 @@ body {
   background-color: #fff;
   color: #000;
 }
-#root {
-  height: 100vh ;
-}
+
 
 /* width */
 ::-webkit-scrollbar {
@@ -35,13 +33,17 @@ body {
 .outer {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
+}
+
+.main-body {
+  flex: 1;
 }
 
 .poll-info {
   display: flex;
   flex-direction: row;
-  flex-grow: 1;
+  height: 100%;
 }
 
 .poll-result-panel h1{
@@ -188,6 +190,7 @@ body {
   align-items: center;
   margin: 2rem;
   gap: 0.5rem;
+  height: 100%;
 }
 
 .poll-result-heading {
